--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "11.0.1",
+    "axios": "1.10.0",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1"
   },
@@ -51,6 +52,7 @@
     "ts-loader": "9.5.2",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
+    "tsx": "4.20.3",
     "typescript": "5.7.3",
     "typescript-eslint": "8.20.0"
   },
